--- a/main.css
+++ b/main.css
@@ -316,106 +316,235 @@ span {
 
 
 
-
-  /* .shade {
-    overflow: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background-image: linear-gradient( 150deg, rgba(0, 0, 0, 0.65), transparent);
-}  */
-
-.blackboard {
-    position: relative;
-    width: 640px;
-    margin: 7% auto;
-    border: tan solid 12px;
-    border-top: #bda27e solid 12px;
-    border-left: #b19876 solid 12px;
-    border-bottom: #c9ad86 solid 12px;
-    box-shadow: 0px 0px 6px 5px rgba(58, 18, 13, 0), 0px 0px 0px 2px #c2a782, 0px 0px 0px 4px #a58e6f, 3px 4px 8px 5px rgba(0, 0, 0, 0.5);
-    background-image: radial-gradient( circle at left 30%, rgba(34, 34, 34, 0.3), rgba(34, 34, 34, 0.3) 80px, rgba(34, 34, 34, 0.5) 100px, rgba(51, 51, 51, 0.5) 160px, rgba(51, 51, 51, 0.5)), linear-gradient( 215deg, transparent, transparent 100px, #222 260px, #222 320px, transparent), radial-gradient( circle at right, #111, rgba(51, 51, 51, 1));
-    background-color: #333;
-}
-
-.blackboard:before {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
+  .contact_us * {
+    font-family: Nunito, sans-serif;
+  }
+  
+  .contact_us a {
+    text-decoration-line: none;
+    text-decoration-thickness: initial;
+    text-decoration-style: initial;
+    text-decoration-color: initial;
+  }
+  
+  .contact_us .text-blk {
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    line-height: 25px;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+  }
+  
+  .contact_us input:focus {
+    outline-color: initial;
+    outline-style: none;
+    outline-width: initial;
+  }
+  
+  .contact_us textarea:focus {
+    outline-color: initial;
+    outline-style: none;
+    outline-width: initial;
+  }
+  
+  .contact_us .responsive-cell-block {
+    min-height: 75px;
+  }
+  
+  .contact_us .responsive-container-block {
+    min-height: 75px;
+    height: fit-content;
     width: 100%;
-    height: 100%;
-    background-image: linear-gradient( 175deg, transparent, transparent 40px, rgba(120, 120, 120, 0.1) 100px, rgba(120, 120, 120, 0.1) 110px, transparent 220px, transparent), linear-gradient( 200deg, transparent 80%, rgba(50, 50, 50, 0.3)), radial-gradient( ellipse at right bottom, transparent, transparent 200px, rgba(80, 80, 80, 0.1) 260px, rgba(80, 80, 80, 0.1) 320px, transparent 400px, transparent);
-    border: #2c2c2c solid 2px;
-    content: "Contact Us";
-    font-family: 'Permanent Marker', cursive;
-    font-size: 2.2em;
-    color: rgba(238, 238, 238, 0.7);
-    text-align: center;
-    padding-top: 20px;
-}
-
-.form {
-    padding: 70px 20px 20px;
-}
-
-p {
-    position: relative;
-    margin-bottom: 1em;
-}
-
-label {
-    vertical-align: middle;
-    font-family: 'Permanent Marker', cursive;
-    font-size: 1.6em;
-    color: rgba(238, 238, 238, 0.7);
-}
-
-p:nth-of-type(5) > label {
-    vertical-align: top;
-}
-
-input,
-textarea {
-    vertical-align: middle;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     padding-left: 10px;
-    background: none;
-    border: none;
-    font-family: 'Permanent Marker', cursive;
-    font-size: 1.6em;
-    color: rgba(238, 238, 238, 0.8);
-    line-height: .6em;
-    outline: none;
-}
-
-textarea {
-    height: 120px;
-    font-size: 1.4em;
-    line-height: 1em;
-    resize: none;
-}
-
-input[type="submit"] {
-    cursor: pointer;
-    color: rgba(238, 238, 238, 0.7);
-    line-height: 1em;
-    padding: 0;
-}
-
-input[type="submit"]:focus {
-    background: rgba(238, 238, 238, 0.2);
-    color: rgba(238, 238, 238, 0.2);
-}
-
-::-moz-selection {
-    background: rgba(238, 238, 238, 0.2);
-    color: rgba(238, 238, 238, 0.2);
-    text-shadow: none;
-}
-
-::selection {
-    background: rgba(238, 238, 238, 0.4);
-    color: rgba(238, 238, 238, 0.3);
-    text-shadow: none;
-}
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;
+    justify-content: flex-start;
+  }
+  
+  .contact_us .responsive-container-block.bigContainer {
+    padding-top: 10px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+  }
+  
+  .contact_us .responsive-container-block.Container {
+    max-width: 1320px;
+    margin-top: 50px;
+    margin-right: auto;
+    margin-bottom: 50px;
+    margin-left: auto;
+  }
+  
+  .contact_us .mainImg {
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+  }
+  
+  .contact_us .responsive-cell-block.wk-desk-7.wk-ipadp-8.wk-tab-12.wk-mobile-12 {
+    background-color: #333333;
+    padding-top: 30px;
+    padding-right: 50px;
+    padding-bottom: 30px;
+    padding-left: 50px;
+  }
+  
+  .contact_us .text-blk.heading {
+    color: white;
+    font-size: 35px;
+    line-height: 48px;
+    font-weight: 800;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 30px;
+    margin-left: 0px;
+  }
+  
+  .contact_us #message {
+    width: 100%;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+  }
+  
+  .contact_us .emailArea {
+    width: 49%;
+  }
+  
+  .contact_us .firstRow {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 30px;
+    margin-left: 0px;
+    width: 100%;
+  }
+  
+  .contact_us .fullNameArea {
+    width: 49%;
+  }
+  
+  .contact_us .cardHead {
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    color: white;
+  }
+  
+  .contact_us .submit {
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+    text-align: center;
+    background-image: initial;
+    background-position-x: initial;
+    background-position-y: initial;
+    background-size: initial;
+    background-repeat-x: initial;
+    background-repeat-y: initial;
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+    background-color: #00b2eb;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+  
+  .contact_us .formTable {
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .contact_us .messageArea {
+    width: 100%;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 30px;
+    margin-left: 0px;
+  }
+  
+  .contact_us .fullName {
+    width: 100%;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+  }
+  
+  .contact_us .email {
+    width: 100%;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+  }
+  
+  @media (max-width: 1024px) {
+    .contact_us .firstRow {
+      flex-direction: column;
+    }
+  
+    .contact_us .fullNameArea {
+      width: 100%;
+      margin-top: 0px;
+      margin-right: 0px;
+      margin-bottom: 30px;
+      margin-left: 0px;
+    }
+  
+    .contact_us .emailArea {
+      width: 100%;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .contact_us .responsive-container-block.bigContainer {
+      padding-top: 10px;
+      padding-right: 20px;
+      padding-bottom: 10px;
+      padding-left: 20px;
+    }
+  
+    .contact_us .responsive-container-block.Container {
+      padding-top: 0px;
+      padding-right: 0px;
+      padding-bottom: 0px;
+      padding-left: 0px;
+    }
+  
+    .contact_us .responsive-cell-block.wk-desk-7.wk-ipadp-8.wk-tab-12.wk-mobile-12 {
+      padding-top: 10px;
+      padding-right: 10px;
+      padding-bottom: 10px;
+      padding-left: 10px;
+    }
+  }
